--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
         "lint": "eslint ."
     },
     "dependencies": {
+        "@react-native-community/async-storage": "^1.11.0",
         "@react-native-community/masked-view": "^0.1.10",
+        "axios": "^0.19.2",
         "react": "16.11.0",
         "react-native": "0.62.2",
         "react-native-elements": "^2.0.2",
